RESOLVED FIXED56333
[GTK] [WebKit2] The UIProcess never changes the mouse cursor
https://bugs.webkit.org/show_bug.cgi?id=56333
Summary [GTK] [WebKit2] The UIProcess never changes the mouse cursor
Martin Robinson
Reported 2011-03-14 14:07:45 PDT
When hovering over links the UIProcess never changes the mouse cursor. The stub for changing the cursor is unimplemented.
Attachments
Patch (1.98 KB, patch)
2011-03-14 15:19 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-03-14 15:19:48 PDT
Adam Barth
Comment 2 2011-03-15 02:11:52 PDT
Comment on attachment 85728 [details] Patch I'm not an expert here, but this looks reasonable to me.
Alejandro G. Castro
Comment 3 2011-03-15 02:39:11 PDT
Comment on attachment 85728 [details] Patch Looks good.
Martin Robinson
Comment 4 2011-03-15 08:44:38 PDT
Comment on attachment 85728 [details] Patch Clearing flags on attachment: 85728 Committed r81137: <http://trac.webkit.org/changeset/81137>
Martin Robinson
Comment 5 2011-03-15 08:44:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.